// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with empty message 1`] = `
<div>
  <p>
    select some expenses
  </p>
</div>
`;

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  <p>
    Viewing 3 expenses totalling
              $1,141.95
  </p>
</div>
`;
